Texture space coordinates are not changable on text objects (Cycles) #36139

Closed
opened 2013-07-14 19:01:43 +02:00 by Thomas Beck · 4 comments
Member

%%%Hi guys,

- Operating System, Graphics card ---

Ubuntu64, 16bg ram, 2gtx560tioc 2gb ram each

- Blender version with error, and version that worked ---

current trunk, r58235

- Short description of error ---

The texture space coords are not getting changed on text objects

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Just open up the supplied blend file. I tested it with BI and Cycles on spheres and text objects... just switch to rendered view and hit alt+a..the texture should change their position on the text object too.

%%%

%%%Hi guys, - Operating System, Graphics card --- Ubuntu64, 16bg ram, 2gtx560tioc 2gb ram each - Blender version with error, and version that worked --- current trunk, r58235 - Short description of error --- The texture space coords are not getting changed on text objects - Steps for others to reproduce the error (preferably based on attached .blend file) --- Just open up the supplied blend file. I tested it with BI and Cycles on spheres and text objects... just switch to rendered view and hit alt+a..the texture should change their position on the text object too. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Tested with r58244

This seems to be a problem only with Cycles, Blender-Internal works here.%%%

%%%Tested with r58244 This seems to be a problem only with Cycles, Blender-Internal works here.%%%

%%%Fix in svn revision 58265, thanks for the report.%%%

%%%Fix in svn revision 58265, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36139
No description provided.