Fix #36139: cycles not taking texture spacing settings into account for generated coordinates on text objects.