source/blender/blenkernel/intern/mesh.c
@@ -702,6 +702,19 @@ void BKE_mesh_texspace_get(Mesh *me, float r_loc[3], float r_rot[3], float r_siz
 	if (r_size) copy_v3_v3(r_size, me->size);
 }
 
+void BKE_mesh_texspace_copy_from_object(Mesh *me, Object *ob)
+{
+	float *texloc, *texrot, *texsize;
+	short *texflag;
+
+	if (BKE_object_obdata_texspace_get(ob, &texflag, &texloc, &texsize, &texrot)) {
+		me->texflag = *texflag;
+		copy_v3_v3(me->loc, texloc);
+		copy_v3_v3(me->size, texsize);
+		copy_v3_v3(me->rot, texrot);
+	}
+}
+
 float (*BKE_mesh_orco_verts_get(Object *ob))[3]
 {
 	Mesh *me = ob->data;
